<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltl_automaton_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jren313@gatech.edu">jren313</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ltl_automaton_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ltl2ba</depend>
  <depend>example_interfaces</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
