<?xml version="1.0"?>
<package format="3">
  <name>ltl_automaton_msgs</name>
  <version>0.1.0</version>
  <description>The message definition package for ltl_automaton_core and other extended packages</description>

  <maintainer email="jren313@gatech.edu">jimingren</maintainer>

  <license>MIT</license>

  <!-- ROS 2 build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for messages and services -->
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>ltl2ba</depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export dependencies for ament -->
  <export>
    <build_type>ament_cmake</build_type>
    <depend>rosidl_default_generators</depend>
  </export>
</package>
